# ai-automatic-env-build

./: .gitignore  README.md  llama_index_shell_client.py  llama_index_shell_server.py  markdown_code_parser.py  math_utils.py  poc_python.py  poc_python_autogen.py  poc_python_search_replace.py  poc_python_search_replace_run_log.txt  poc_shell.py  poc_web.py  poc_web_autogen.py  pyproject.toml  server.py
agent/: custom.py
calculator_pro/: calculator.py
calculator_project/: calculator.py  test_main.py
command/: cli.py
demo_calculator_pro/: test_calculator.py
llm/: openrouter.py
shell_app/: llama_index_poc_pytest_lib.py
